adicionei novos artigos

--- a/index.html
+++ b/index.html
@@ -160,6 +160,30 @@
                 </p>
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
             </article>
+            <article>
+                <img src="imagens/barbie.webp" alt="filme da barbie" />
+                <header>
+                    <cinema>13/07/2022 às 12:35</cinema>
+                </header>
+                <h3>Cinema em ebulição com estreia de super filme!</h3>
+                <p>
+                    A cidade está em polvorosa com a estreia do super filme []. Desde a Barbie abertura das bilheterias, filas quilométricas se formaram em frente aos cinemas, com fãs ansiosos para garantir seus lugares e presenciar a magia da telona.
+                </p>
+                <a href="#" title="Leia a notícia completa">Ler mais</a>
+            </article>
+
+            <article>
+                <img src="imagens/oppenheimer.jpg" alt="filme oppenheimer" />
+                <header>
+                    <cinema>13/07/2022 às 12:35</cinema>
+                </header>
+                <h3>Cinema em ebulição com estreia de super filme!</h3>
+                <p>
+                    Oppenheimer não é apenas mais um filme de Christopher Nolan. Afinal, é o primeiro filme do diretor na sua nova parceria com a Universal -- que ele assinou após problemas na distribuição de Tenet com a Warner. Além disso, claro, por compartilhar a data de lançamento com Barbie, a biografia do cientista considerado o pai da bomba atômica acabou ganhando ainda mais projeção.
+                </p>
+                <a href="#" title="Leia a notícia completa">Ler mais</a>
+            </article>
+
             </div>
         </div>
         </div>
