fiz modificações no menu

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                 </p>
-                <a href="#" title="Leia a notícia completa">Ler mais</a>
+                <a href="#sports" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
                 <img src="./imagens/futebol-americano.jpg" alt="Jogador de futebol americano correndo com a bola na mão" />
@@ -97,7 +97,7 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                 </p>
-                <a href="#" title="Leia a notícia completa">Ler mais</a>
+                <a href="#economy" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
                 <img src="./imagens/euro.jpg" alt="Várias notas de euro" />
@@ -140,7 +140,7 @@
         A tecnologia vive em constante mutação, moldando nosso mundo a cada dia. As mudanças atuais são particularmente empolgantes, impulsionadas por avanços em Inteligência Artificial, Machine Learning e Big Data.
         
                     </p>
-                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    <a href="#tecnology" title="Leia a notícia completa">Ler mais</a>
                 </article>
             </div>
         </section>
@@ -158,7 +158,7 @@
                 <p>
                     A cidade está em polvorosa com a estreia do super filme []. Desde a Barbie abertura das bilheterias, filas quilométricas se formaram em frente aos cinemas, com fãs ansiosos para garantir seus lugares e presenciar a magia da telona.
                 </p>
-                <a href="#" title="Leia a notícia completa">Ler mais</a>
+                <a href="#entertainment" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
                 <img src="imagens/barbie.webp" alt="filme da barbie" />
